# documind-enterprise

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: chat.py  documents.py
backend/app/core/: config.py  database.py
backend/app/models/: base.py  document.py
backend/app/schemas/: chat_schema.py  doc_schema.py
backend/app/services/: ingestion.py  llm_agent.py  vector_store.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/features/chat/: ChatTab.tsx
frontend/src/features/dashboard/: UploadTab.tsx
