# File: documind-enterprise/backend/pyproject.toml 
# Purpose: Dependency management. We use asyncpg for high-performance async database operations.

[tool.poetry]
name = "documind-backend"
version = "0.1.0"
description = "Enterprise RAG Backend with FastAPI and LangChain"
authors = ["DocuMind Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"         # Async PostgreSQL driver
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pgvector = "^0.2.4"         # Python support for vector operations
alembic = "^1.13.1"         # Database migrations

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"