# File: documind-enterprise/backend/pyproject.toml 
# Purpose: Dependency management. We use asyncpg for high-performance async database operations.

[tool.poetry]
name = "documind-backend"
version = "0.1.0"
description = "Enterprise RAG Backend with FastAPI and LangChain"
authors = ["DocuMind Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pgvector = "^0.2.4"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langchain-openai = "^0.2.0"
tiktoken = "^0.7.0"
pypdf = "^4.0.0"
langgraph = "^0.2.0"

# --- Development & Testing Dependencies ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"        # Required for FastAPI TestClient
pytest-asyncio = "^0.23.0" # For testing async functions directly if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"